Add metamodel and metamodel process to support type safe where clauses. Relates to #5